changed of to at

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Computer Club of Western Michigan University
+name: Computer Club at Western Michigan University
 markdown: redcarpet
 pygments: true
 permalink: /:title/
